tests/33-bytes-param-causing-error-1.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> $DIR/33-bytes-param-causing-error-1.rs:4:12
  |
4 | #[bitfield(bytes = 4)]
  |            ^^^^^
  |
  = note: source type: `_::ExpectedBytes` (32 bits)
  = note: target type: `Base` (24 bits)
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
